Source/WebCore/inspector/front-end/inspector.css
/* ... */
.progress-bar-container {
    display: -webkit-flex;
    margin: 0 8px;
    -webkit-flex: 1 0;
}

.progress-bar-container span {
    padding: 6px;
}

.progress-bar-container progress {
    margin-top: 7px;
    -webkit-flex: 1 0;
}

body.platform-mac .progress-bar-container progress {
    margin-top: 6px;
}

.progress-bar-container button.status-bar-item {
    border-left: none;
    margin-top: 1px;
}

/* Timelapse Controller Styles */

.timelapse-controller-status-bar-item .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
    -webkit-mask-position: -192px -48px;
}

.toggle-record-status-bar-item .glyph {
    -webkit-mask-position: -288px 0;
}

/* override .status-bar-item > .glyph rule */
button.pause-playback-status-bar-item > .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
/* the play and pause buttons are too big in proportion to other icons. */
/* unscaled:    -webkit-mask-position: -160px -48px; */
    -webkit-mask-size: 288px;
    -webkit-mask-position: -141px -41px;
}

/* override .status-bar-item > .glyph rule */
button.play-playback-status-bar-item > .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
/* the play and pause buttons are too big in proportion to other icons. */
/* unscaled:    -webkit-mask-position: -128px -48px; */
    -webkit-mask-size: 288px;
    -webkit-mask-position: -114px -41px;
}

button.replay-to-anchor-status-bar-item > .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
}

button.set-anchor-status-bar-item > .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
    -webkit-mask-position: 0 -24px;
}

.reset-playback-status-bar-item .glyph {
    -webkit-mask-position: 0 0;
}

/* override .status-bar-item > .glyph rule */
button.timelapse-locked-status-bar-item > .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
/* the play and pause buttons are too big in proportion to other icons. */
/* unscaled:    -webkit-mask-position: -128px -48px; */
    -webkit-mask-size: 288px;
    -webkit-mask-position: -114px -41px;
}

button.breakpoint-radar-status-bar-item > .glyph {
    -webkit-mask-image: url(Images/timelapseButtonGlyphs.png);
    -webkit-mask-position: -32px -24px;
}

.timelapse-button-icon {
    display: inline-block;
    width: 16px;
    height: 16px;
    background-color: rgba(0, 0, 0, 0.5);
    cursor: pointer;
}

.timelapse-button-icon:hover {
    background-color: rgba(200, 100, 0, 0.6);
}

.toggled .timelapse-button-icon,
.toggled.timelapse-button-icon {
    background-color: rgb(66, 129, 235) !important;
}

.timelapse-anchor-button {
    -webkit-mask-image: url(Images/timelapseAnchor.png);    
}

.timelapse-jump-button {
    -webkit-mask-image: url(Images/timelapseJumpButton.png);
}

.timelapse-inputs-grid .timelapse-anchor-button {
    margin-right: 6px;
}

#timelapse-controller-view {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    width: 100%;
    min-height: 210px;
    overflow-y: auto;
    overflow-x: hidden;
    z-index: 11;
}

.timelapse-recording-message {
    position: absolute;
    left: 0px;
    right: 0px;
    top: 20px;
    text-align: center;
    font-weight: bold;
    font-size: 12pt;
    color: #666;
    cursor: pointer;
}

.timelapse-recording-message:hover {
    text-decoration: underline;
    color: #a04010;
}

.message-pulse {
    -webkit-animation-name: message-pulse;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: infinite;
}

#timelapse-replaying-view .split-view-contents {
    overflow-x: none;
    overflow-y: scroll;
}

#timelapse-recording-view .timelapse-scrollview {
    position: absolute;
    height: 30px;
    left: 50px;
    right: 50px;
    top: 60px;
}

@-webkit-keyframes message-pulse {
    0%   { color: #444; }
    50%  { color: #888; }
    100% { color: #444; }
}

@-webkit-keyframes playback-pulse {
    0%   { opacity: 1; }
    50%  { opacity: 0.3; }
    100% { opacity: 1; }
}

@-webkit-keyframes breakpoint-blink {
    0%   { opacity: 1; }
    50%  { opacity: 0.8; }
    100% { opacity: 1; }
}

.timelapse-overview-column-label {
    left: 5px;
    width: 100px;
    position: absolute;
}

.timelapse-overview-column-main {
    left: 100px;
    right: 15px;
}

.timelapse-overview-row-main {
    top: 60px; 
    bottom: 0;
}

.timelapse-overview-row-label {
    top: 15px;
}

div.timelapse-timeline-label-wrapper {
    position: absolute;
    left: 0;
    width: 85px;
    height: 24px;
    margin: 3px 5px 2px 5px;
    border-radius: 5px;
    background-clip: border-box;
    -webkit-transition: all .4s ease-in;
}

div.timelapse-timeline-label:hover {
    opacity: 0.75;
}

div.timelapse-timeline-label {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    cursor: pointer;
    border: 1px solid #555;
    border-radius: 3px;
    background-image: url(Images/timelapseLabelBackground.png);
    background-repeat: repeat-x;
    background-position-y: -1px;
    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.09);
    opacity: 0.85;
    -webkit-transition: opacity .2s linear;
    vertical-align: middle;
    line-height: 20px;
    text-align: center;
    font-weight: bold;
}

div.timelapse-timeline-label-wrapper.disabled {
    opacity: 1;
    background-color: #aaa !important;
    color: #333 !important;
}

div.timelapse-preview-container, .timelapse-overview-preview {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}
/* ... */

